<resources>
    <string name="app_name">pTwenty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="login_">Login?</string>
    <string name="register_">Register?</string>
</resources>